<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#B8D1D1"
    android:padding="5dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7935323" />

    <ImageButton
        android:id="@+id/btn_delete_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/delete_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_outline_24" />

    <TextView
        android:id="@+id/first_bag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_trash_bag"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_bag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_trash_bag"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_bag_item_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_bag_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_bag_title">

        <TextView
            android:id="@+id/id_title_first_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id:"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_id_content_first_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@+id/id_title_first_bag"
            app:layout_constraintTop_toBottomOf="@+id/id_title_first_bag" />

        <TextView
            android:id="@+id/weight_title_first_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_weight_content_first_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@+id/weight_title_first_bag"
            app:layout_constraintTop_toBottomOf="@+id/weight_title_first_bag" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7935323" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_bag_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_bag_title">

        <TextView
            android:id="@+id/id_title_second_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_id_content_second_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@+id/id_title_second_bag"
            app:layout_constraintTop_toBottomOf="@+id/id_title_second_bag" />

        <TextView
            android:id="@+id/weight_title_second_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_weight_content_second_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="weight"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@+id/weight_title_second_bag"
            app:layout_constraintTop_toBottomOf="@+id/weight_title_second_bag" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>